Properly disable all buttons in the copy dialogs if no writer is installed and only-create-image
	is selected.
Fixed VideoDVD on-the-fly writing problem.
Select appropriate raw writing mode if raw96r is not supported.
Properly save the device search path. Now hotplug devices should be detected properly.
BACKPORT: DVD+R Double Layer writing.

0.11.12
Another qt 3.1 compile fix
Mkisofs 2.02 obsoletes the use of -L, -H, and -P. Replaced them by the long versions.
Fixed GET PERFORMANCE command which caused crashes on some systems and DMA problems on other.
Default to RAW writing mode for Audio CDs which contain zero length pregaps since there are
    so many buggy CD writers out there failing to create proper CDs in that case.
Backported new device configuration format fixing all issues with removable devices (USB,...)
Fix: Some writers return the number of bytes instead of the number of write speed descriptors
     in mode page 2a data (thanks to <simon@munton.demon.co.uk>)
Fixed a bug which caused the audio ripping window to stay greyed out if cddb queries are disabled.
Always use single click in the tree view like konqi does.
	
0.11.11
Qt 3.1 compile fix
Honor the manual writing app selection for automatic CDRW erasing.
K3b now refuses to use transcode >= 0.6.12 for dvd ripping. The next major version will
	be able to use new transcode versions.
Properly eject the written media between multiple cd (clone) copies
Fix toc reading for old CD drives which report raw to data in bcd.

0.11.10
Support Mp3 files starting with multiple ID3 tags.
Improved ~ handling in the QuickDirSelector.
Save/Load composer fields in audio projects
Save/Load default DVD Copy reading device
Fixed cdrecord output parsing on Debian
Backported the audio project beautification
Added checks for all TEAC R5XS compatible (and thus non-MMC) writers
Fixed writing speed detection with some DVD writers
Fixed capacity detection with some DVD writers
Fixed VideoCD creation with enabled PBC