@@ -1264,6 +1264,7 @@ K3bCdDevice::Toc K3bCdDevice::CdDevice::readToc() const
       break;
 
     case MEDIA_DVD_PLUS_R:
+    case MEDIA_DVD_PLUS_R_DL:
       //
       // a DVD+R disk may have multible sessions
       // every session may contain up to 16 fragments
@@ -1926,6 +1927,7 @@ int K3bCdDevice::CdDevice::currentProfile() const
     case 0x14: return MEDIA_DVD_RW_SEQ;
     case 0x1A: return MEDIA_DVD_PLUS_RW;
     case 0x1B: return MEDIA_DVD_PLUS_R;
+    case 0x2B: return MEDIA_DVD_PLUS_R_DL;
     case 0x08: return MEDIA_CD_ROM;
     case 0x09: return MEDIA_CD_R;
     case 0x0A: return MEDIA_CD_RW;
@@ -2107,7 +2109,8 @@ K3bCdDevice::NextGenerationDiskInfo K3bCdDevice::CdDevice::ngDiskInfo() const
 	cmd[9] = 4+2048;
 	if( cmd.transport( TR_DIR_READ, dvdheader, 4+2048 ) ) {
 	  kdDebug() << "(K3bCdDevice::CdDevice) Unable to read DVD structure." << endl;
-	  inf.m_numLayers = 1;
+	  inf.m_numLayers = ( inf.m_mediaType == MEDIA_DVD_PLUS_R_DL ? 2 : 1 );
+	  // TODO: get DVD+R Double Layer Boundary Information
 	}
 	else {
 	  // some debugging stuff
