@@ -7,6 +7,7 @@ Fixed VideoDVD on-the-fly writing problem.
 Select appropriate raw writing mode if raw96r is not supported.
 Properly save the device search path. Now hotplug devices should be detected properly.
 BACKPORT: DVD+R Double Layer writing.
+Properly close a DVD when the user did not want multisession.
 
 0.11.12
 Another qt 3.1 compile fix
